# desafio-ml-bioinfo

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
data/raw/: seqs_test.txt
notebooks/: 01_exploracao_dados.ipynb  02_feature_engineering.ipynb  03_modelagem.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
results/: submission.csv
